--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
       <title>부산국제영화제</title>
       <link rel="stylesheet" href="css/common.css">
       <link rel="stylesheet" href="css/main.css">
+      <link rel="stylesheet" href="library/swiper.css">
 </head>
 <body>
       <!-- 상단바(공통) -->
@@ -31,25 +32,56 @@
       </header>
       <!-- 컨텐츠 -->
       <!-- 슬라이더 (큰 이미지) -->
-      <div>
-            슬라이더
-            <img src="http://placehold.it/960x700" />
+      <div id="big_image_slider">
+            <div class="swiper-container big_slider">
+                  <div class="swiper-wrapper">
+                        <div class="swiper-slide slide1"></div>
+                        <div class="swiper-slide slide2"></div>
+                        <div class="swiper-slide slide3"></div>
+                  </div>
+                  <!-- Add Pagination -->
+                  <div class="swiper-pagination"></div>
+            </div>
       </div>
       <!-- 이벤트 -->
-      <div>
-            <h3>EVENT</h3>
-            <p>더보기+</p>
-            <img src="http://placehold.it/360x245">
-            <img src="http://placehold.it/360x245">
-            <img src="http://placehold.it/360x245">
+      <div id="content_event">
+            <div id="event_text">
+                  <h3>EVENT</h3>
+                  <p>더보기+</p>
+            </div>
+            <div id="event_container">
+                  <!-- <img src="images/event_item01.png" width="400px">
+                  <img src="images/event_item02.png" width="360px">
+                  <img src="images/event_item02.png" width="360px"> -->
+                  <div class="event_item">
+                        <p>개막식</p>
+                        <p>2021.10.06</p> 
+                  </div>
+                  <div class="event_item">
+                        <p>야외 무대인사</p>
+                        <p>2021.10.06 ~ 10.15</p> 
+                  </div>
+                  <div class="event_item">
+                        <p>폐막식</p>
+                        <p>2021.10.15</p> 
+                  </div>
+            </div>
       </div>
       <!-- 슬라이더 (작은 이미지) -->
-      <div>
+      <div id="small_image_slider">
             <h3>월드스네마</h3>
-            <img src="http://placehold.it/340x320">
-            <img src="http://placehold.it/340x320">
-            <img src="http://placehold.it/340x320">
-            <img src="http://placehold.it/340x320">
+            <div class="swiper-container small_slider">
+                  <div class="swiper-wrapper">
+                        <div class="swiper-slide slide1"></div>
+                        <div class="swiper-slide slide2"></div>
+                        <div class="swiper-slide slide3"></div>
+                        <div class="swiper-slide slide4"></div>
+                        <div class="swiper-slide slide5"></div>
+                  </div>
+                  <!-- Add Arrows -->
+                  <div class="swiper-button-next swiper-button-black"></div>
+                  <div class="swiper-button-prev swiper-button-black"></div>
+            </div>
       </div>
       <!-- 컨텐츠 이미지들 -->
       <div id="content_films">
@@ -58,9 +90,9 @@
       </div>
       <!-- 공지사항, 뉴스 -->
       <div id="content_text">
-            <div class="container_notice">
+            <section class="container_notice">
                   <h3>공지사항</h3>
-                  <div class="notice_item">
+                  <article class="notice_item">
                         <div class="date">
                               <p>01</p>
                               <p>2021.10</p>
@@ -69,8 +101,8 @@
                               <p>티켓 발매 및 상영관 입장 안내</p>
                               <p>티켓 발매 및 상영관 입장 안내</p>
                         </div>
-                  </div>
-                  <div class="notice_item">
+                  </article>
+                  <article class="notice_item">
                         <div class="date">
                               <p>27</p>
                               <p>2021.09</p>
@@ -79,8 +111,8 @@
                               <p>개막식 & 폐막식 상영 예매 안내</p>
                               <p>개막식 & 폐막식 상영 예매 안내</p>
                         </div>
-                  </div>
-                  <div class="notice_item">
+                  </article>
+                  <article class="notice_item">
                         <div class="date">
                               <p>24</p>
                               <p>2021.09</p>
@@ -89,11 +121,11 @@
                               <p>부산국제영화제 휠체어석(장애인석) 사전 신청 공지</p>
                               <p>휠체어석(장애인석) 사전 신청 공지</p>
                         </div>
-                  </div>
-            </div>
-            <div class="container_news">
+                  </article>
+            </section>
+            <section class="container_news">
                   <h3>뉴스</h3>
-                  <div class="news_item">
+                  <article class="news_item">
                         <div class="date">
                               <p>07</p>
                               <p>2021.10</p>
@@ -102,8 +134,8 @@
                               <p>‘나도 감독이다’의 정감독님 초청</p>
                               <p>‘나도 감독이다’의 정강독님 초청 안내</p>
                         </div>
-                  </div>
-                  <div class="news_item">
+                  </article>
+                  <article class="news_item">
                         <div class="date">
                               <p>01</p>
                               <p>2021.10</p>
@@ -112,8 +144,8 @@
                               <p>이번 수상자는 누가 될 것인가...</p>
                               <p>이번 수상자에 대한 관심이 높다</p>
                         </div>
-                  </div>
-                  <div class="news_item">
+                  </article>
+                  <article class="news_item">
                         <div class="date">
                               <p>01</p>
                               <p>2021.10</p>
@@ -122,8 +154,8 @@
                               <p>야외 무대인사에서 ooo님이 등장</p>
                               <p>야외 무대인사에서 예상치 못한 배우가 등장하는데...</p>
                         </div>
-                  </div>
-            </div>
+                  </article>
+            </section>
       </div>
       <!-- 스폰서 -->
       <div id="main_sponser">
@@ -144,5 +176,8 @@
                   이 홈페이지는 부산국제영화제와 관련이 없습니다. (개인 포트폴리오 입니다.)
             </div>
       </footer>
+
+<script src="./library/swiper.min.js"></script>
+<script src="./js/main.js"></script>
 </body>
 </html>
