10/20 이벤트 수정, 갤러리 적용중

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       </header>
       <!-- 컨텐츠 -->
       <!-- 슬라이더 (큰 이미지) -->
-      <div id="big_image_slider">
+      <section id="big_image_slider">
             <div class="swiper-container big_slider">
                   <div class="swiper-wrapper">
                         <div class="swiper-slide slide1"></div>
@@ -42,17 +42,14 @@
                   <!-- Add Pagination -->
                   <div class="swiper-pagination"></div>
             </div>
-      </div>
+      </section>
       <!-- 이벤트 -->
-      <div id="content_event">
+      <section id="content_event">
             <div id="event_text">
                   <h3>EVENT</h3>
                   <p>더보기+</p>
             </div>
             <div id="event_container">
-                  <!-- <img src="images/event_item01.png" width="400px">
-                  <img src="images/event_item02.png" width="360px">
-                  <img src="images/event_item02.png" width="360px"> -->
                   <div class="event_item">
                         <p>개막식</p>
                         <p>2021.10.06</p> 
@@ -66,9 +63,9 @@
                         <p>2021.10.15</p> 
                   </div>
             </div>
-      </div>
+      </section>
       <!-- 슬라이더 (작은 이미지) -->
-      <div id="small_image_slider">
+      <section id="small_image_slider">
             <h3>월드스네마</h3>
             <div class="swiper-container small_slider">
                   <div class="swiper-wrapper">
@@ -82,14 +79,82 @@
                   <div class="swiper-button-next swiper-button-black"></div>
                   <div class="swiper-button-prev swiper-button-black"></div>
             </div>
-      </div>
+      </section>
       <!-- 컨텐츠 이미지들 -->
-      <div id="content_films">
+      <section id="content_films">
             <h3>Films</h3>
+            <div class="container">
+                  <div class="row">
+                        <div class="col col-md-5">
+                              <div class="film1">
+                                    <img class="bg-img" src="./images/film_img01.jpg" alt="">
+                                    <div class="film-caption">
+                                          <h4>Lorem ipsum</h4>
+                                          <h5>Lorem ipsum</h5>
+                                    </div>
+                              </div>
+                        </div>
+                        <div class="col col-md-7">
+                              <div class="film2">
+                                    <img class="bg-img" src="./images/film_img01.jpg" alt="">
+                                    <div class="film-caption">
+                                          <h4>Lorem ipsum</h4>
+                                          <h5>Lorem ipsum</h5>
+                                    </div>
+                              </div>
+                              <div class="film3">
+                                    <img class="bg-img" src="./images/film_img01.jpg" alt="">
+                                    <div class="film-caption">
+                                          <h4>Lorem ipsum</h4>
+                                          <h5>Lorem ipsum</h5>
+                                    </div>
+                              </div>
+                              <div class="film4">
+                                    <img class="bg-img" src="./images/film_img01.jpg" alt="">
+                                    <div class="film-caption">
+                                          <h4>Lorem ipsum</h4>
+                                          <h5>Lorem ipsum</h5>
+                                    </div>
+                              </div>
+                              <div class="film5">
+                                    <img class="bg-img" src="./images/film_img01.jpg" alt="">
+                                    <div class="film-caption">
+                                          <h4>Lorem ipsum</h4>
+                                          <h5>Lorem ipsum</h5>
+                                    </div>
+                              </div>
+                              <div class="film6">
+                                    <img class="bg-img" src="./images/film_img01.jpg" alt="">
+                                    <div class="film-caption">
+                                          <h4>Lorem ipsum</h4>
+                                          <h5>Lorem ipsum</h5>
+                                    </div>
+                              </div>
+                        </div>
+                  </div>
+            </div>
+            <!-- <div class="films item">
+                  <img src="./images/film_img01.jpg" alt="">
+            </div>
+            <div class="films item">
+                  <div class="right_item">
+                        <img src="./images/film_img01.jpg" alt="">
+                  <img src="./images/film_img01.jpg" alt="">
 
-      </div>
+                  </div>
+                  <div class="right_item">
+                  <img src="./images/film_img01.jpg" alt="">
+                  <img src="./images/film_img01.jpg" alt="">
+
+                  </div>
+                  <img src="./images/film_img01.jpg" alt="">
+                  <img src="./images/film_img01.jpg" alt="">
+                  <img src="./images/film_img01.jpg" alt="">
+                  <div class="right_item"></div>
+            </div> -->
+      </section>
       <!-- 공지사항, 뉴스 -->
-      <div id="content_text">
+      <section id="content_text">
             <section class="container_notice">
                   <h3>공지사항</h3>
                   <article class="notice_item">
@@ -156,11 +221,11 @@
                         </div>
                   </article>
             </section>
-      </div>
+      </section>
       <!-- 스폰서 -->
-      <div id="main_sponser">
+      <section id="main_sponser">
             스폰서
-      </div>
+      </section>
       <!-- 푸터(공통) -->
       <footer id="main_footer">
             <div class="address">
