10/21 갤러리 layout 추가, zoom in 이벤트 적용중

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" href="css/common.css">
       <link rel="stylesheet" href="css/main.css">
       <link rel="stylesheet" href="library/swiper.css">
+      <link rel="stylesheet" href="library/animate.css">
 </head>
 <body>
       <!-- 상단바(공통) -->
@@ -83,75 +84,82 @@
       <!-- 컨텐츠 이미지들 -->
       <section id="content_films">
             <h3>Films</h3>
-            <div class="container">
-                  <div class="row">
-                        <div class="col col-md-5">
-                              <div class="film1">
-                                    <img class="bg-img" src="./images/film_img01.jpg" alt="">
-                                    <div class="film-caption">
-                                          <h4>Lorem ipsum</h4>
-                                          <h5>Lorem ipsum</h5>
-                                    </div>
+            <div class="films_container">
+                  <div class="left-row">
+                        <div class="film film1">
+                              <img class="bg-img" src="./images/test_img_1_1.png" alt="">
+                              <div class="film-caption">
+                                    <h4>Lorem ipsum</h4>
+                                    <h5>개막작</h5>
                               </div>
                         </div>
-                        <div class="col col-md-7">
-                              <div class="film2">
-                                    <img class="bg-img" src="./images/film_img01.jpg" alt="">
-                                    <div class="film-caption">
-                                          <h4>Lorem ipsum</h4>
-                                          <h5>Lorem ipsum</h5>
-                                    </div>
+                  </div>
+                  <div class="right-row">
+                        <div class="film film2">
+                              <img class="bg-img" src="./images/test_img_1_1.png" alt="">
+                              <div class="film-caption">
+                                    <h4>Lorem ipsum</h4>
+                                    <h5>Lorem ipsum</h5>
                               </div>
-                              <div class="film3">
-                                    <img class="bg-img" src="./images/film_img01.jpg" alt="">
-                                    <div class="film-caption">
-                                          <h4>Lorem ipsum</h4>
-                                          <h5>Lorem ipsum</h5>
-                                    </div>
+                        </div>
+                        <div class="film film3">
+                              <img class="bg-img" src="./images/test_img_1_1.png" alt="">
+                              <div class="film-caption">
+                                    <h4>Lorem ipsum</h4>
+                                    <h5>Lorem ipsum</h5>
                               </div>
-                              <div class="film4">
-                                    <img class="bg-img" src="./images/film_img01.jpg" alt="">
-                                    <div class="film-caption">
-                                          <h4>Lorem ipsum</h4>
-                                          <h5>Lorem ipsum</h5>
-                                    </div>
+                        </div>
+                        <div class="film hidden">
+                              <div class="film-caption">
+                                    <h4>Lorem ipsum</h4>
+                                    <h5>Lorem ipsum</h5>
                               </div>
-                              <div class="film5">
-                                    <img class="bg-img" src="./images/film_img01.jpg" alt="">
-                                    <div class="film-caption">
-                                          <h4>Lorem ipsum</h4>
-                                          <h5>Lorem ipsum</h5>
-                                    </div>
+                              <img class="bg-img" src="./images/test_img_1_1.png" alt="">
+                        </div>
+                        <div class="film hidden">
+                              <img class="bg-img" src="./images/test_img_1_1.png" alt="">
+                              <div class="film-caption">
+                                    <h4></h4>
+                                    <h5></h5>
                               </div>
-                              <div class="film6">
-                                    <img class="bg-img" src="./images/film_img01.jpg" alt="">
-                                    <div class="film-caption">
-                                          <h4>Lorem ipsum</h4>
-                                          <h5>Lorem ipsum</h5>
-                                    </div>
+                        </div>
+                        <div class="film film4">
+                              <img class="bg-img" src="./images/test_img_1_1.png" alt="">
+                              <div class="film-caption">
+                                    <h4>Lorem ipsum</h4>
+                                    <h5>Lorem ipsum</h5>
+                              </div>
+                        </div>
+                        <div class="film hidden">
+                              <div class="film-caption">
+                                    <h4>Lorem ipsum</h4>
+                                    <h5>Lorem ipsum</h5>
+                              </div>
+                              <img class="bg-img" src="./images/test_img_1_1.png" alt="">
+                        </div>
+                        <div class="film film5">
+                              <img class="bg-img" src="./images/test_img_1_1.png" alt="">
+                              <div class="film-caption">
+                                    <h4>Lorem ipsum</h4>
+                                    <h5>Lorem ipsum</h5>
+                              </div>
+                        </div>
+                        <div class="film hidden">
+                              <img class="bg-img" src="./images/test_img_1_1.png" alt="">
+                              <div class="film-caption">
+                                    <h4></h4>
+                                    <h5></h5>
+                              </div>
+                        </div>
+                        <div class="film film6">
+                              <img class="bg-img" src="./images/test_img_1_1.png" alt="">
+                              <div class="film-caption">
+                                    <h4>Lorem ipsum</h4>
+                                    <h5>Lorem ipsum</h5>
                               </div>
                         </div>
                   </div>
             </div>
-            <!-- <div class="films item">
-                  <img src="./images/film_img01.jpg" alt="">
-            </div>
-            <div class="films item">
-                  <div class="right_item">
-                        <img src="./images/film_img01.jpg" alt="">
-                  <img src="./images/film_img01.jpg" alt="">
-
-                  </div>
-                  <div class="right_item">
-                  <img src="./images/film_img01.jpg" alt="">
-                  <img src="./images/film_img01.jpg" alt="">
-
-                  </div>
-                  <img src="./images/film_img01.jpg" alt="">
-                  <img src="./images/film_img01.jpg" alt="">
-                  <img src="./images/film_img01.jpg" alt="">
-                  <div class="right_item"></div>
-            </div> -->
       </section>
       <!-- 공지사항, 뉴스 -->
       <section id="content_text">
