10/23 소개, 프로그램 레이아웃 코딩

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                   </div>
                   <div class="gnb"> 
                         <ul>
-                              <li><a href="pages/announce.html">부산국제영화제</a></li>
+                              <li><a href="#">부산국제영화제</a></li>
                               <li><a href="#">프로그램</a></li>
                               <li><a href="#">가이드</a></li>
                               <li><a href="#">이벤트</a></li>
@@ -259,7 +259,9 @@
             </div>
       </footer>
 
+<script src="./library/jquery-3.6.0.min.js"></script>
 <script src="./library/swiper.min.js"></script>
+<script src="./js/common.js"></script>
 <script src="./js/main.js"></script>
 </body>
 </html>
