--- a/pages/program.html
+++ b/pages/program.html
@@ -36,72 +36,120 @@
             <h3>오늘의 상영작</h3>
             <div class="program_container">
                 <div class="film item">
-                    <img src="../images/film_img1.png" alt="">
-                    <h4>Lorem ipsum</h4> 
-                    <h5>Lorem ipsum</h5> 
+                    <div class="bg">
+                        <img src="../images/film_img1.png" alt="">
+                    </div>
+                    <div class="caption">
+                        <h4>Lorem ipsum</h4> 
+                        <h5>Lorem ipsum</h5> 
+                    </div>
                 </div>
                 <div class="film item">
-                    <img src="../images/film_img1.png" alt="">
-                    <h4>Lorem ipsum</h4>
-                    <h5>Lorem ipsum</h5> 
-                 </div>
-                 <div class="film item">
-                    <img src="../images/film_img1.png" alt="">
-                    <h4>Lorem ipsum</h4>
-                    <h5>Lorem ipsum</h5> 
-                 </div>
-                 <div class="film item">
-                    <img src="../images/film_img1.png" alt="">
-                    <h4>Lorem ipsum</h4> 
-                    <h5>Lorem ipsum</h5> 
-                 </div>
-                 <div class="film item">
-                    <img src="../images/film_img1.png" alt="">
-                    <h4>Lorem ipsum</h4> 
-                    <h5>Lorem ipsum</h5> 
-                 </div>
-                 <div class="film item">
-                    <img src="../images/film_img1.png" alt="">
-                    <h4>Lorem ipsum</h4> 
-                    <h5>Lorem ipsum</h5> 
-                 </div>
-          </div>
+                    <div class="bg">
+                        <img src="../images/film_img1.png" alt="">
+                    </div>
+                    <div class="caption">
+                        <h4>Lorem ipsum</h4> 
+                        <h5>Lorem ipsum</h5> 
+                    </div>
+                </div>
+                <div class="film item">
+                    <div class="bg">
+                        <img src="../images/film_img1.png" alt="">
+                    </div>
+                    <div class="caption">
+                        <h4>Lorem ipsum</h4> 
+                        <h5>Lorem ipsum</h5> 
+                    </div>
+                </div>
+                <div class="film item">
+                    <div class="bg">
+                        <img src="../images/film_img1.png" alt="">
+                    </div>
+                    <div class="caption">
+                        <h4>Lorem ipsum</h4> 
+                        <h5>Lorem ipsum</h5> 
+                    </div>
+                </div>
+                <div class="film item">
+                    <div class="bg">
+                        <img src="../images/film_img1.png" alt="">
+                    </div>
+                    <div class="caption">
+                        <h4>Lorem ipsum</h4> 
+                        <h5>Lorem ipsum</h5> 
+                    </div>
+                </div>
+                <div class="film item">
+                    <div class="bg">
+                        <img src="../images/film_img1.png" alt="">
+                    </div>
+                    <div class="caption">
+                        <h4>Lorem ipsum</h4> 
+                        <h5>Lorem ipsum</h5> 
+                    </div>
+                </div>
+            </div>
         </section>
         <!-- 상영 예정작 -->
         <section class="content_program_t">
             <h3>상영 예정작</h3>
             <div class="program_container">
                 <div class="film item">
-                    <img src="../images/film_img1.png" alt="">
-                    <h4>Lorem ipsum</h4> 
-                    <h5>Lorem ipsum</h5> 
+                    <div class="bg">
+                        <img src="../images/film_img1.png" alt="">
+                    </div>
+                    <div class="caption">
+                        <h4>Lorem ipsum</h4> 
+                        <h5>Lorem ipsum</h5> 
+                    </div>
                 </div>
                 <div class="film item">
-                    <img src="../images/film_img1.png" alt="">
-                    <h4>Lorem ipsum</h4> 
-                    <h5>Lorem ipsum</h5> 
-                 </div>
-                 <div class="film item">
-                    <img src="../images/film_img1.png" alt="">
-                    <h4>Lorem ipsum</h4> 
-                    <h5>Lorem ipsum</h5> 
-                 </div>
-                 <div class="film item">
-                    <img src="../images/film_img1.png" alt="">
-                    <h4>Lorem ipsum</h4> 
-                    <h5>Lorem ipsum</h5> 
-                 </div>
-                 <div class="film item">
-                    <img src="../images/film_img1.png" alt="">
-                    <h4>Lorem ipsum</h4> 
-                    <h5>Lorem ipsum</h5> 
-                 </div>
-                 <div class="film item">
-                    <img src="../images/film_img1.png" alt="">
-                    <h4>Lorem ipsum</h4> 
-                    <h5>Lorem ipsum</h5> 
-                 </div>
-          </div>
+                    <div class="bg">
+                        <img src="../images/film_img1.png" alt="">
+                    </div>
+                    <div class="caption">
+                        <h4>Lorem ipsum</h4> 
+                        <h5>Lorem ipsum</h5> 
+                    </div>
+                </div>
+                <div class="film item">
+                    <div class="bg">
+                        <img src="../images/film_img1.png" alt="">
+                    </div>
+                    <div class="caption">
+                        <h4>Lorem ipsum</h4> 
+                        <h5>Lorem ipsum</h5> 
+                    </div>
+                </div>
+                <div class="film item">
+                    <div class="bg">
+                        <img src="../images/film_img1.png" alt="">
+                    </div>
+                    <div class="caption">
+                        <h4>Lorem ipsum</h4> 
+                        <h5>Lorem ipsum</h5> 
+                    </div>
+                </div>
+                <div class="film item">
+                    <div class="bg">
+                        <img src="../images/film_img1.png" alt="">
+                    </div>
+                    <div class="caption">
+                        <h4>Lorem ipsum</h4> 
+                        <h5>Lorem ipsum</h5> 
+                    </div>
+                </div>
+                <div class="film item">
+                    <div class="bg">
+                        <img src="../images/film_img1.png" alt="">
+                    </div>
+                    <div class="caption">
+                        <h4>Lorem ipsum</h4> 
+                        <h5>Lorem ipsum</h5> 
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
     <!-- 스폰서 -->
